--- a/02_transform_census/02_transform_census_pooja.ipynb
+++ b/02_transform_census/02_transform_census_pooja.ipynb
@@ -1931,6 +1931,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#scatter plot comparing 2 variables together/histograms to see distribution/box plots\n",
+    "#e.g."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
