--- a/02_transform_restaurant/02_transform_restaurant_rouhong_kat.ipynb
+++ b/02_transform_restaurant/02_transform_restaurant_rouhong_kat.ipynb
@@ -864,12 +864,227 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['SONIC Drive In', 'Taco Bell', \"Arby's\", \"Steak 'n Shake\",\n",
+       "       \"Wendy's\", 'Burger King', 'Chipotle Mexican Grill', '7-Eleven',\n",
+       "       'Dairy Queen', 'Mr. Hero', 'Golden Chick', \"Carl's Jr\", 'Checkers',\n",
+       "       \"Rally's\", \"Togo's\", 'Little Q Hot Pot', \"McDonald's\", 'Five Guys',\n",
+       "       'Boston Road Pizza', 'Boston Market',\n",
+       "       \"D'Angelo Grilled Sandwiches\", \"Nino's Pizzarama\",\n",
+       "       \"Filippi's Pizza Grotto\", 'Jack in the Box', 'Round Table Pizza',\n",
+       "       'El Pollo Loco', 'In-N-Out Burger', 'Copper Oven Artisan Pizza',\n",
+       "       'Del Taco', 'Little Caesars Pizza', 'Sbarro',\n",
+       "       \"Casey's General Store\", 'SUBWAY', \"Fat Patty's\", 'Pizza Hut',\n",
+       "       \"Culver's\", 'KFC', 'SONIC Drive-In', 'Whataburger', 'Chick-Fil-A',\n",
+       "       'Firehouse Subs', \"Cupie's Drive-In\", \"Primo's Pizza\",\n",
+       "       \"Simple Simon's Pizza\", 'CASA Mexicana', 'Bob Evans',\n",
+       "       'Players Grill', 'Back Yard Burgers', \"Italo's Pizza\",\n",
+       "       'Hunan Gardens', 'Toppers Pizza', 'Hernandez Mexican Restaurant',\n",
+       "       'Glorious Foods Gourmet to go & Catering', \"Schlotzsky's\",\n",
+       "       'Chicken Express', 'Big House Burgers', \"Jerry's Subs & Pizza\",\n",
+       "       \"Fox's Pizza Den\", 'Pizza Pub', 'Grande Italian Restaurant',\n",
+       "       \"Arni's Crawfordsville\", 'Arctic Circle', 'Pizza Barn',\n",
+       "       \"Rico's Pizza & Subs\", \"B's Pizza\", \"Domino's Pizza\", \"Hardee's\",\n",
+       "       'Port of Subs', 'Milk Street Cafe', 'Pei Wei', 'W.G. Grinders',\n",
+       "       \"Foster's Freeze\", 'Caseys Carry Out Pizza', 'Tastee Freez',\n",
+       "       'Taco Bueno', \"Jimmy John's\", 'Subway', \"Papa John's Pizza\",\n",
+       "       'Cook Out', 'SUBWAY¬Æ', 'Krispy Krunchy Chicken',\n",
+       "       \"Hardee's/red Burrito\", \"Lacey's On The Hill Restaurant\",\n",
+       "       'Pizza Pro', 'Cottage Inn Pizza', 'Runza', \"Eudici's Pizza\",\n",
+       "       'Taco Cabana', \"Boomer's Drive-In\", 'Hot Dog on a Stick',\n",
+       "       \"Dunkin' Donuts\", \"Christo's Original\", 'Carvel', 'Chicken Inn',\n",
+       "       'Shake Shack', 'Quiznos Sub', 'KFC - Kentucky Fried Chicken',\n",
+       "       'Chick-fil-A', 'El Burrito Loco', \"Papa Gino's\", 'Spangles',\n",
+       "       'Capri Restaurant', \"Angelina's Pizza\", \"Chanello's Pizza\",\n",
+       "       'Krystal', 'China Bowl Take Out Restaurant', 'Sonic Drive In',\n",
+       "       \"Auntie Anne's Pretzels\", 'Garden Catering', \"A's Ace Burgers\",\n",
+       "       \"Baker's Drive Thru\", 'Pizza Guys', 'Chicago Pizza With A Twist',\n",
+       "       'Surfside Burger Shack', 'Baskin-Robbins', \"Church's Chicken\",\n",
+       "       'Ameci Pizza & Pasta', 'Ak Buffet', \"Barro's Pizza\",\n",
+       "       \"Long John Silver's\", 'Boys Burgers', \"Topper's Pizza\",\n",
+       "       'Panda Express', 'Einstein Bros Bagels', 'Band Box Diner',\n",
+       "       'Quiznos', \"Jersey Mike's Subs\", \"Tom's Drive In\",\n",
+       "       'Boston Burger Company', 'Romas Pizza', 'Panera Bread',\n",
+       "       'Wienerschnitzel', 'Pony Express To Go', 'Popeyes', 'Sonic',\n",
+       "       \"Gambino's Pizza\", 'West Point Pizza', \"McAlister's Deli\",\n",
+       "       'Barberitos', 'Mrs. Fields', 'Taco Mayo', \"Tacconelli's Pizza\",\n",
+       "       \"Guerrazzi's\", \"Gus's Carryout\", \"Moe's Southwest Grill\",\n",
+       "       'Siam Fusion', 'Steak Escape', 'Mr. Chicken', 'B.GOOD',\n",
+       "       'Taco Casa', \"Sam's Gyros\",\n",
+       "       \"Bojangles' Famous Chicken 'n Biscuits\", 'Steak N Shake',\n",
+       "       'Waffle House', \"Raising Cane's Chicken Fingers\", 'Sumo Steaks',\n",
+       "       'Dragon Dragon', 'Crown Fried Chicken', \"Tumby's Pizza\",\n",
+       "       'Creperie', 'Qdoba Mexican Eats', \"Fat Mo's Burgers\",\n",
+       "       \"Charley's Grilled Subs\", \"Miss Katie's Diner\", 'Chronic Tacos',\n",
+       "       'Shawarma Kebab', \"Wild Willy's\", \"Jake's Wayback Burgers\",\n",
+       "       'Taco Mama', 'King of Wings', 'Pretzel Time', 'Sarku Japan',\n",
+       "       \"Ivan's Restaurant\", 'Fuddruckers', 'Mandarin Garden',\n",
+       "       'El Taquito', 'Four Burgers', 'Penn Station East Coast Subs',\n",
+       "       'The New Chalet', 'Blackjack Pizza', 'Gyromania Grill',\n",
+       "       'Mc Donalds', 'Yoshinoya', 'China Garden', \"Mama's Fried Chicken\",\n",
+       "       'China Restaurant', 'Burger Basket', 'Lobster Hut',\n",
+       "       \"Ben and Jerry's\", 'Taco Time', 'Mr. Hoagie', \"Fazzari's\",\n",
+       "       \"Taco John's\", 'Pizza Inn', \"Cousin's Subs\", 'Fosters Freeze',\n",
+       "       'Starbucks Coffee', \"Carl's Jr.\", \"Taco Bob's\", 'White Castle',\n",
+       "       'Pepperjax Grill', 'The Pizza Company', \"Joe's Crab Shack\",\n",
+       "       'The Sandwich Place', \"Little Caesar's Pizza\", 'Maid-rite',\n",
+       "       'Frates Drive-In', \"Jim's Steaks\", 'Gourmet Grill',\n",
+       "       'Villa Italian Kitchen', 'Jacks N Joe', 'Wingstop', 'Beef Villa',\n",
+       "       'Tanuki Sushi Bar and Garden', 'Old Carolina Barbecue Company',\n",
+       "       'Flame Broiler', 'Kow Thai Take Out', 'iSushi',\n",
+       "       'Shangri-la Chinese Restaurant', 'Blackies Hotdog Stand',\n",
+       "       'Chun Wah Kam Noodle Factory', 'Italian Pizzeria Restaurant',\n",
+       "       'Sakana', \"Bubba's Texas Burger Shack\", \"Ani's Chicken\",\n",
+       "       'Farmer Boys', 'Jamba Juice', 'Hot Lips Pizza', \"Rubio's\",\n",
+       "       \"Chicken Mary's\", 'Fuku', 'Little Caesars', 'Primo Hoagies',\n",
+       "       'De Afghanan Kabob House', \"Raising Cane's\", \"Moe's Burger Joint\",\n",
+       "       \"Bobby's Burger Palace\", 'Loving Hut', \"Capriotti's Sandwich Shop\",\n",
+       "       'Italian Village Pizza', 'Mustard Seed', 'Saladworks',\n",
+       "       \"Jim's Steakout\", 'Charo Chicken', 'Huddle House',\n",
+       "       'Great Wall Restaurant', \"Luby's\", 'Big Island Pizza',\n",
+       "       \"My Daddy's Pizza & Grille\", 'Boddie Noell Enterprises Inc',\n",
+       "       'Roma Pizza', 'Cafe Paris', 'Abruzzi Pizza', 'Bistro To Go',\n",
+       "       \"Arthur Treacher's Fish & Chips\", 'Blimpie',\n",
+       "       \"Tony Wang's Chinese Restaurant\", 'D & M Subs', 'Danielle Inc',\n",
+       "       \"Smithfield's Chicken 'n Bar-b-q\", 'Jack in the Box -',\n",
+       "       'Gangnam Style Korean Kitchen', 'Red Baron Drive-In', 'Which Wich',\n",
+       "       'Sonic Drive-In', 'Sonic Drive in', \"Grandy's\", 'Wolf River Diner',\n",
+       "       'The Extreme Pita', 'Picnic Basket', 'Popeyes Louisiana Kitchen',\n",
+       "       \"Natraj's Tandoori\", 'Acropolis Gyro Palace', \"Bennidito's Pizza\",\n",
+       "       \"Dick's Hamburgers\", 'Pick Up Stix', 'B Good', 'Peach Garden',\n",
+       "       'Pollo Tropical', \"Dominick's Italian Restaurant\",\n",
+       "       'St. Clair Broiler', 'Baja Fresh Mexican Grill', 'Fatburger',\n",
+       "       \"Charlie's Pizzeria\", 'Salad Creations', \"Price's Chicken Coop\",\n",
+       "       'Jollibee', \"Lilly's Restaurant\", 'Sakura Japanese Restaurant',\n",
+       "       'Low Chinese American Restaurant', \"Johnny's Wife's Place\",\n",
+       "       \"Pita's Republic\", 'Comet Burgers', 'Boardwalk Grill',\n",
+       "       'Henny Penny Family Restaurant', 'Dominion Pizza',\n",
+       "       'Cook St. Helena', 'Golden Dragon', 'Batter Up', \"Quizno's\",\n",
+       "       'ShopHouse Southeast Asian Kitchen', 'Mignano Bros',\n",
+       "       'Backyard Grill', 'Gold Star Chili', 'Cluck-U Chicken',\n",
+       "       'Local Burger', 'Jon Smith Subs', \"Fox's Gourmet Delicatessen\",\n",
+       "       'Great Wraps', \"Lin's Garden\", 'Pretzel Maker', 'Penguin Point',\n",
+       "       'Capri Italian Restaurant', 'King Wah', 'Regions Bank', 'KFC/AW',\n",
+       "       'McDonalds', 'Bojangles', 'Taco Bell / KFC', \"Arby's - Closed\",\n",
+       "       'Shell', \"Carl's Jr. / Green Burrito\", \"Shamus's Sandwich Shoppe\",\n",
+       "       'Long John Silvers', 'Fajita Grill', \"George's Gyros Spot 2\",\n",
+       "       'Lakewood Ranch Baptist Church', 'China Buffet', 'The Grille',\n",
+       "       'Good Guys Pizza', 'Charleys Philly Steaks', 'Islands Restaurant',\n",
+       "       \"The Arch at McDonald's Campus Office Building\", 'Buona Vita',\n",
+       "       \"Rick's Drive In Out\", \"Johnson's Popcorn\",\n",
+       "       'Popeyes Chicken Biscuits', 'Boloco', \"Wolf's Dairy Queen\",\n",
+       "       \"Sweet Magnolia's Cafe Bakery\", \"Hardee's / Red Burrito\",\n",
+       "       'Great American Hamburger Pie Co',\n",
+       "       'Golden Harvest Chinese Restaurant', 'The Flame Broiler',\n",
+       "       \"Penn's Thai Cafe\", \"Rally's Hamburgers\",\n",
+       "       \"Long John Silver's / AW\", 'Mcdonalds Whitehouse', \"Captain D's\",\n",
+       "       'Burger King/Popeyes', 'KFC/Taco Bell',\n",
+       "       \"Carl's Jr / Green Burrito\", 'Bob Evans Restaurant', 'El Original',\n",
+       "       'Old Country Buffet', 'Arbys', \"Fazoli's\", 'Los Cotijas Taco Shop',\n",
+       "       'Hardees', \"Photo's Hot Dogs\", 'Mr Hero', 'T-Mobile', 'Marathon',\n",
+       "       'Jimmy Johns', 'Errandbug Fast Restaurant Delivery', 'Legendz',\n",
+       "       \"Lion's Choice\", \"Mcdonald's\", 'Adobe Cantina Salsa',\n",
+       "       'Orange Julius', \"Kasa's Pizza\", 'The Dog Pit', 'Great Bend Taco',\n",
+       "       \"Riviera D'Italia\", \"Charlie's Restaurant\", 'Burrito Bros.',\n",
+       "       'Dunkin Donuts', 'Best Gyros', 'Steele Pier Hotdogs',\n",
+       "       \"Wendy's Valenti Management\", 'Skyline Chili', 'Tropicana Pizza',\n",
+       "       'VeganBurg', 'Smashburger', \"Moe's Cafe\", 'Vista Drive In',\n",
+       "       'China City', \"Blake's Lotaburger\", 'Belleria Pizzeria',\n",
+       "       \"Pal's Sudden Service\", 'Tiffin', \"Baker's Drive-thru\",\n",
+       "       'High Tech Burrito', 'Parkside Gyros', 'Dairy Heaven',\n",
+       "       'Cobani Gyro Kebab', \"Zaxby's\", 'Au Bon Pain', 'East of Edens',\n",
+       "       'Chipotle', 'Grand China Chinese Restaurant', 'Taco Del Mar',\n",
+       "       'Pizza Pipeline', \"Richard's Pizza\", 'The Corner Cafe',\n",
+       "       'Maki Fresh', 'Fat Boy Burgers', 'Flying J', 'Extreme Pita',\n",
+       "       'Git-It-N-Git', 'GD Bro Burger', 'Hometown Buffet', \"Ryan's\",\n",
+       "       'Smoothie King', \"Famous Dave's\", 'Sunrise Gyros',\n",
+       "       'Zankou Chicken', \"Rascal's Teriyaki Grill\", 'Ay Jalisco',\n",
+       "       'BURGERFI', 'Rallys', \"Zaxby's Chicken Fingers & Buffalo Wings\",\n",
+       "       'Gyros Express', 'Super Wings', 'Roche Bros.', 'TheMINT Gastropub',\n",
+       "       'California Tortilla', 'Thai Delight', 'Bristol 45 Diner',\n",
+       "       'Sheetz', 'Frankies', \"Togi's Sub Station\", 'Citizen Burger Bar',\n",
+       "       'Tropical Smoothie Cafe', \"Papa Joe's Pizza\", 'HiBoy Drive-in',\n",
+       "       'El Ranchito Taco Shop', \"Bush's Chicken\",\n",
+       "       'Hilton Boston Logan Airport', 'Festival Eatery',\n",
+       "       \"Patrick's on Third\", \"Mason's Famous Lobster Rolls\",\n",
+       "       'Burger House', 'Pollo Campero', 'All About Burger',\n",
+       "       \"Nathan's Famous\", 'The Swinging Door', 'Long John Silvers / A&W',\n",
+       "       \"Wetzel's Pretzels\", 'Clambake Seafood Restaurant', 'BeanThru',\n",
+       "       'Taco Bell/KFC', 'Cafe Zona Rosa', 'Papa Gyros', \"Checker's Pizza\",\n",
+       "       'Chinatown Inn', 'Kum & Go', 'PDQ', \"Ray J's American Grill\",\n",
+       "       'New York Pizza Department', 'Fashion Cafe', 'Qdoba Mexican Grill',\n",
+       "       \"Tam's Burgers\", \"CD's Wings\", \"McDonald's of Rolesville\",\n",
+       "       'A&W/Long John Silvers', \"Captain D's Seafood\", 'Wawa',\n",
+       "       'Popeyes Chicken & Biscuits', 'Westchester Burger Company',\n",
+       "       'Raising Canes', 'Mcdonalds', 'Panda Express Innovation Kitchen',\n",
+       "       'Chicken Kitchen', \"Jim Bob's Chicken Fingers\", 'Country Buffet',\n",
+       "       \"Petro's Chili & Chips\", 'QDOBA Mexican Eats',\n",
+       "       'California Chicken Cafe', 'Blue Coast Burrito', 'Lake Trout 2',\n",
+       "       'Happy Dragon', 'Flaming Grill and Buffet', \"Oscar's Restaurant\",\n",
+       "       \"Mooney's Ice Cream Store\", 'Cozumel', 'Cremo Drive-In',\n",
+       "       'Jalsa Indian Fast Food', 'La Hacienda Mexican Restaurant',\n",
+       "       'Flushing A', 'Halo Burger', 'Ocean Empire Restaurant', 'Kismet',\n",
+       "       \"Miguel's Jr\", \"Mickey's Gyros & Ribs\", 'Pilot Travel Center',\n",
+       "       'Fratellos Hot Dogs', 'Taco Bell/Pizza Hut', 'Burger King¬Æ',\n",
+       "       \"Fast Eddie's MOAB\", \"Lupo's Char-Pit\",\n",
+       "       \"Original Tommy's Hamburgers\", 'Wienerschitzel',\n",
+       "       \"Jack's Goal Line Stand\", 'b.good', \"Bucky's Family Restaurant\",\n",
+       "       'Little Italy', \"Sam's Pizza Restaurant\", \"Hobo's Korner Kitchen\",\n",
+       "       'Mangia Pizza', \"Carl's Jr. / The Green Burrito\", \"Jason's Deli\",\n",
+       "       \"Andy's Frozen Custard\", \"Portillo's\", 'Johnny Rockets',\n",
+       "       'Taqueria', 'Umami Burger', 'King Gyros',\n",
+       "       'Five Guys Burgers And Fries', 'KFC/Long John Silvers',\n",
+       "       \"Zio's Italian Kitchen\", \"Auntie Anne's\", 'Walmart Supercenter',\n",
+       "       \"Jimmy's Grotto\", \"Eegee's\", 'Earth Fare', 'B&D Burgers',\n",
+       "       \"Nick's Gyros\", '90 Miles Cuban Cafe', 'Tonys Pizza',\n",
+       "       'Sesame Burgers & Beer', \"Braum's\", 'Hon Lin Restaurant',\n",
+       "       \"Popeye's Louisiana Kitchen\", \"McDonalds's\",\n",
+       "       \"Mah's Garden Restaurant\", 'Dairy Queen (Treat Only)',\n",
+       "       'Five Guys Burgers Fries', 'Megs Drive In', 'The Hotdog Shoppe',\n",
+       "       'Kumagoro Fine Japanese Restaurant and Sushi Bar',\n",
+       "       'Wingstop Restaurant', \"Whipper's Pizza\", \"Kim's Oriental Kitchen\",\n",
+       "       'Chinatown Express', 'Old Mill Crab House', 'Mr Taco',\n",
+       "       \"The 50's Cafe\", \"Papa J's\", 'Jack In The Box',\n",
+       "       'Wise Guys A Chicago Eatery', \"Sonic America's Drive-In\",\n",
+       "       \"Heff's Burgers\", 'El Pollo Regio', 'El Sombrero', 'Genghis Grill',\n",
+       "       \"Palio's Pizza Cafe\", \"Ly's Cafe\", 'Poki Roll', 'Sub Conscious',\n",
+       "       \"Bad Daddy's Burger Bar\", \"Kosta's Gyros\", \"Bell's Pizza\",\n",
+       "       'The Hat', \"Don & Millie's\", 'PepperJax Grill', \"Ben & Jerry's\",\n",
+       "       'Mr. Gyros Greek Food & Pastry', 'Legends Burgers',\n",
+       "       \"Plato's Closet\", \"Stoko's\"], dtype=object)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "restaurant_clean_df[\"restaurant_name\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export restaurant data to CSV\n",
     "restaurant_clean_df.to_csv('restaurant_clean.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# extract restaurant name into another table --> restaurant_franchise ID"
    ]
   },
   {
