--- a/02_transform_zip_zcta/02_transform_zip_zcta_tracey_kat.ipynb
+++ b/02_transform_zip_zcta/02_transform_zip_zcta_tracey_kat.ipynb
@@ -910,6 +910,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# break No and street in the address --> what are the streets that have the most restaurants\n",
+    "# Restaurant name --> table for restaurants -->\n",
+    "# "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
