--- a/02_transform_restaurant/02_transform_restaurant_rouhong_kat-Copy1.ipynb
+++ b/02_transform_restaurant/02_transform_restaurant_rouhong_kat-Copy1.ipynb
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1085,7 @@
        "4         Wendy's              9768     Grand River Ave    48204"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1097,7 +1097,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9343, 4)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "restaurant_address_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1107,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1202,7 +1222,7 @@
        "4                       48204  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1213,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1239,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1248,7 +1268,7 @@
        "571"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1260,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1270,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1294,17 +1314,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create restaurant ID\n",
-    "restaurant_names_df.index.name='resturant_id'"
+    "restaurant_names_df.index.name='restaurant_id'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1331,7 +1351,7 @@
        "      <th>restaurant_name</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>resturant_id</th>\n",
+       "      <th>restaurant_id</th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1361,16 +1381,16 @@
        "</div>"
       ],
       "text/plain": [
-       "             restaurant_name\n",
-       "resturant_id                \n",
-       "0             SONIC Drive In\n",
-       "2                  Taco Bell\n",
-       "3                     Arby's\n",
-       "4             Steak 'n Shake\n",
-       "5                    Wendy's"
+       "              restaurant_name\n",
+       "restaurant_id                \n",
+       "0              SONIC Drive In\n",
+       "2                   Taco Bell\n",
+       "3                      Arby's\n",
+       "4              Steak 'n Shake\n",
+       "5                     Wendy's"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1381,11 +1401,147 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replace restaurant names in restaurant address table with restaurant_id > use merge \n",
+    "#restaurant_address_df['restaurant__name_id'] = restaurant_names_df.lookup(restaurant_names_df.index, restaurant_names_df['restaurant_name'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "restaurant_names_df['id']=restaurant_names_df.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>restaurant_name</th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>restaurant_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SONIC Drive In</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Taco Bell</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Arby's</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Steak 'n Shake</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Wendy's</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              restaurant_name  id\n",
+       "restaurant_id                    \n",
+       "0              SONIC Drive In   0\n",
+       "2                   Taco Bell   2\n",
+       "3                      Arby's   3\n",
+       "4              Steak 'n Shake   4\n",
+       "5                     Wendy's   5"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "restaurant_names_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#test_one = pd.merge(restaurant_names_df, restaurant_address_df,left_on=\"restaurant_name\", right_on=\"restaurant_name\")\n",
+    "\n",
+    "inner_join = pd.merge(restaurant_address_df, restaurant_names_df,  \n",
+    "                      on ='restaurant_name',  \n",
+    "                      how ='inner')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9343, 5)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inner_join.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Replace restaurant names in restaurant address table with restaurant_id\n"
+    "restaurant_address_df.head()"
    ]
   }
  ],
