Rename census columns to lower-case snake style

--- a/03_load/03_load.ipynb
+++ b/03_load/03_load.ipynb
@@ -2,12 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from sqlalchemy import create_engine\n",
+    "\n",
+    "# Python SQL toolkit and Object Relational Mapper\n",
+    "import sqlalchemy\n",
+    "from sqlalchemy.ext.automap import automap_base\n",
+    "from sqlalchemy.orm import Session\n",
+    "from sqlalchemy import create_engine, inspect, func, distinct\n",
     "\n",
     "# Import password authentication for the postgresql database\n",
     "from config import password"
@@ -17,23 +22,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create database connection"
+    "### Connect to local database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create Engine and connection\n",
+    "engine = create_engine(f\"postgresql://postgres:{password}@localhost:5432/fast_food_census_db\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create Engine and connection\n",
-    "engine = create_engine(f\"postgresql://postgres:{password}@localhost:5432/fast_food_census_db\")\n",
-    "connection = engine.connect()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -42,11 +46,283 @@
        "['zip_code', 'zcta', 'social_economics', 'restaurant', 'restaurant_address']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "engine.table_names()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Use pandas to load csv-converted dataframe into database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ZCTA</th>\n",
+       "      <th>population</th>\n",
+       "      <th>median_age</th>\n",
+       "      <th>median_household_income</th>\n",
+       "      <th>per_capita_income</th>\n",
+       "      <th>poverty_count</th>\n",
+       "      <th>unemployment_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>601</td>\n",
+       "      <td>17242</td>\n",
+       "      <td>40.5</td>\n",
+       "      <td>13092.0</td>\n",
+       "      <td>6999.0</td>\n",
+       "      <td>10772</td>\n",
+       "      <td>2316</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>602</td>\n",
+       "      <td>38442</td>\n",
+       "      <td>42.3</td>\n",
+       "      <td>16358.0</td>\n",
+       "      <td>9277.0</td>\n",
+       "      <td>19611</td>\n",
+       "      <td>1927</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>603</td>\n",
+       "      <td>48814</td>\n",
+       "      <td>41.1</td>\n",
+       "      <td>16603.0</td>\n",
+       "      <td>11307.0</td>\n",
+       "      <td>24337</td>\n",
+       "      <td>3124</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>606</td>\n",
+       "      <td>6437</td>\n",
+       "      <td>43.3</td>\n",
+       "      <td>12832.0</td>\n",
+       "      <td>5943.0</td>\n",
+       "      <td>4163</td>\n",
+       "      <td>230</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>610</td>\n",
+       "      <td>27073</td>\n",
+       "      <td>42.1</td>\n",
+       "      <td>19309.0</td>\n",
+       "      <td>10220.0</td>\n",
+       "      <td>11724</td>\n",
+       "      <td>1290</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  ZCTA  population  median_age  median_household_income  per_capita_income  \\\n",
+       "0  601       17242        40.5                  13092.0             6999.0   \n",
+       "1  602       38442        42.3                  16358.0             9277.0   \n",
+       "2  603       48814        41.1                  16603.0            11307.0   \n",
+       "3  606        6437        43.3                  12832.0             5943.0   \n",
+       "4  610       27073        42.1                  19309.0            10220.0   \n",
+       "\n",
+       "   poverty_count  unemployment_count  \n",
+       "0          10772                2316  \n",
+       "1          19611                1927  \n",
+       "2          24337                3124  \n",
+       "3           4163                 230  \n",
+       "4          11724                1290  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "census_df = pd.read_csv(\"../02_transform_census/clean_census.csv\", dtype={'ZCTA': 'str'})\n",
+    "census_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "census_df.to_sql(name='social_economics', con=engine, if_exists=\"append\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "restaurant_df = pd.read_csv(\"../02_transform_restaurant/restaurant_id.csv\", dtype=)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.read_csv(\"../02_transform_restaurant\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.read_csv(\"../02_transform_zip_zcta\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reflect Tables into SQLAlchemy ORM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reflect an existing database into a new model\n",
+    "Base = automap_base()\n",
+    "\n",
+    "# reflect the tables\n",
+    "Base.prepare(engine, reflect=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "engine.table_names()"
    ]
