Rename columns in census tranform up to exporting to csvs

--- a/01_extract_census/01_extract_census.ipynb
+++ b/01_extract_census/01_extract_census.ipynb
@@ -86,12 +86,12 @@
    "source": [
     "# Column Renaming\n",
     "census_df = census_df.rename(columns={\n",
-    "    \"B19013_001E\": \"Median Household Income\",\n",
-    "    \"B01003_001E\": \"Population\",\n",
-    "    \"B01002_001E\": \"Median Age\",\n",
-    "    \"B19301_001E\": \"Per Capita Income\",\n",
-    "    \"B17001_002E\": \"Poverty Count\",\n",
-    "    \"B23025_005E\": \"Unemployment Count\",\n",
+    "    \"B19013_001E\": \"median_household_income\",\n",
+    "    \"B01003_001E\": \"population\",\n",
+    "    \"B01002_001E\": \"median_age\",\n",
+    "    \"B19301_001E\": \"per_capita_income\",\n",
+    "    \"B17001_002E\": \"poverty_count\",\n",
+    "    \"B23025_005E\": \"unemployment_count\",\n",
     "    \"zip code tabulation area\": \"ZCTA\"})"
    ]
   },
@@ -105,6 +105,13 @@
     "# Note: to avoid any issues later, use encoding=\"utf-8\"\n",
     "census_df.to_csv(\"../00_input/census_data.csv\", encoding=\"utf-8\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
